crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_default_values.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: "serde_json::to_string_pretty(&combined).unwrap()"
---
{
  "bool": true,
  "float": 3.125,
  "int": 42,
  "string": "hello"
}
