crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_derived_body_omit.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: spec
---
{
  "components": {
    "schemas": {
      "CreateUserBody": {
        "properties": {
          "email": {
            "type": "string"
          },
          "name": {
            "type": "string"
          }
        },
        "required": [
          "name",
          "email"
        ],
        "type": "object"
      },
      "User": {
        "properties": {
          "email": {
            "type": "string"
          },
          "id": {
            "type": "integer"
          },
          "name": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "name",
          "email"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "API",
    "version": "1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/users": {
      "post": {
        "operationId": "createUser",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CreateUserBody"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/User"
                }
              }
            },
            "description": "Successful response"
          }
        },
        "summary": "createUser"
      }
    }
  },
  "servers": [
    {
      "url": "/"
    }
  ]
}
