crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_map_type.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: "serde_json::to_string_pretty(&schema).unwrap()"
---
{
  "additionalProperties": {
    "type": "integer"
  },
  "type": "object"
}
