crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_multi_status_all_typeless.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: spec
---
{
  "components": {
    "schemas": {}
  },
  "info": {
    "title": "API",
    "version": "1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/jobs": {
      "post": {
        "operationId": "enqueueJob",
        "responses": {
          "202": {
            "description": "Accepted"
          },
          "204": {
            "description": "No content"
          }
        },
        "summary": "enqueueJob"
      }
    }
  },
  "servers": [
    {
      "url": "/"
    }
  ]
}
