crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_multi_status_mixed.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: spec
---
{
  "components": {
    "schemas": {
      "User": {
        "properties": {
          "id": {
            "type": "integer"
          },
          "name": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "name"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "API",
    "version": "1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/users/{id}": {
      "put": {
        "operationId": "updateUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/User"
                }
              }
            },
            "description": "Successful response"
          },
          "204": {
            "description": "No content"
          }
        },
        "summary": "updateUser"
      }
    }
  },
  "servers": [
    {
      "url": "/"
    }
  ]
}
