crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_named_type.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: "serde_json::to_string_pretty(&schema).unwrap()"
---
{
  "$ref": "#/components/schemas/User"
}
